--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Parte 1</title>
+  <title>M1-306 PLATAFORMAS DE DISTRIBUCIÓN Y CONTENIDO 2023-24	</title>
 </head>
 <body>
-  <h1>Parte 1</h1>
-  <h2>Vídeo Incrustado</h2>
-  
+  <h1>M1-306 PLATAFORMAS DE DISTRIBUCIÓN Y CONTENIDO 2023-24</h1>	
+  <h1>PRÁCTICA FINAL</h1>
+ 		<h2>Ejercicio 1: Clip de vídeo incrustado en HTML 5</h2>
+          		<h3>Tarea 1.2 Crear la web</h3>
+          		<h3>Tarea 1.3 Publicar fichero y vídeo en servidor web gratuito</h3>
+          		<h3>Tarea 1.4 Añadir funcionalidad al vídeo</h3>
+
   <video 
 	controls 
 	width="640" height="360"
@@ -22,5 +26,6 @@
     	
 	Tu navegador no soporta el elemento de video.
   </video>
+  
 </body>
 </html>
