Prueba de otra web

--- a/index.html
+++ b/index.html
@@ -27,5 +27,9 @@
 	Tu navegador no soporta el elemento de video.
   </video>
   
+    <div>
+        <a href="index - copia.html">Volver a la primera página</a>
+    </div>
+
 </body>
 </html>
