--- a/index.html
+++ b/index.html
@@ -3,8 +3,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>M1-306 PLATAFORMAS DE DISTRIBUCIÓN Y CONTENIDO 2023-24	</title>
+  <title>M1-306 PDC 2023-24 - PRA01</title>
+
+<!-- Definición del estilo para ajuste de vídeo -->
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+        }
+        .video-container {
+            width: 100%;
+            max-width: 100%;
+            height: auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        video {
+            width: 100%;
+            height: auto;
+        }
+    </style>
 </head>
+
 <body>
   <h1>M1-306 PLATAFORMAS DE DISTRIBUCIÓN Y CONTENIDO 2023-24</h1>	
   <h1>PRÁCTICA FINAL</h1>
@@ -26,10 +52,6 @@
     	
 	Tu navegador no soporta el elemento de video.
   </video>
-  
-    <div>
-        <a href="index - copia.html">Volver a la primera página</a>
-    </div>
 
 </body>
 </html>
