--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>M1-306 PDC 2023-24 - PRA01</title>
-
-<!-- Definición del estilo para ajuste de vídeo -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>M1-306 2023-24 == PRA01 </title>
     <style>
         body {
             margin: 0;
             padding: 0;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
-            height: 100vh;
             background-color: #f0f0f0;
+        }
+        h1 {
+            color: #00008B; /* Azul oscuro */
+        }
+        h2 {
+            color: #0000FF; /* Azul */
+        }
+        h3 {
+            color: #ADD8E6; /* Azul claro */
         }
         .video-container {
             width: 100%;
@@ -28,30 +34,24 @@
             width: 100%;
             height: auto;
         }
+        .text-black {
+            color: #000000; /* Negro */
+        }
     </style>
 </head>
-
 <body>
-  <h1>M1-306 PLATAFORMAS DE DISTRIBUCIÓN Y CONTENIDO 2023-24</h1>	
-  <h1>PRÁCTICA FINAL</h1>
- 		<h2>Ejercicio 1: Clip de vídeo incrustado en HTML 5</h2>
-          		<h3>Tarea 1.2 Crear la web</h3>
-          		<h3>Tarea 1.3 Publicar fichero y vídeo en servidor web gratuito</h3>
-          		<h3>Tarea 1.4 Añadir funcionalidad al vídeo</h3>
-
-  <video 
-	controls 
-	width="640" height="360"
-	loop
-	muted
-	preload="auto" 
-	poster="240519_M1-306_PRA01_ejercicio_01_poster.jpg">
-
-    	<source src="VID_20240518_200128_yecla_se_corona.mp4" type="video/mp4">
-    	<!-- Se pueden agregar más <source> tags para otros formatos -->
-    	
-	Tu navegador no soporta el elemento de video.
-  </video>
+    <h1>M1-306 PLATAFORMAS DE DISTRIBUCIÓN Y CONTENIDO 2023-24</h1>
+    <h2>Ejercicio 1: Clip de vídeo incrustado en HTML 5</h2>
+    <h3>Tarea 1.2 Crear la web</h3>
+    <div class="text-black">
+        Fichero con vídeo incrustado
+    </div>
+    <div class="video-container">
+        <video controls>
+            <source src="VID_20240518_200128_yecla_se_corona.mp4" type="video/mp4">
+            Tu navegador no soporta el elemento de vídeo.
+        </video>
+    </div>
 
 </body>
 </html>
