--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>M1-306 2023-24 == PRA01 </title>
+
+    <!-- Definición del estilo -->
     <style>
         body {
             margin: 0;
@@ -41,10 +43,15 @@
 </head>
 <body>
     <h1>M1-306 PLATAFORMAS DE DISTRIBUCIÓN Y CONTENIDO 2023-24</h1>
+    <h1>PRÁCTICA FINAL</h1>
     <h2>Ejercicio 1: Clip de vídeo incrustado en HTML 5</h2>
-    <h3>Tarea 1.2 Crear la web</h3>
+    <h3>Tarea 1.2 Crear la web. Fichero html</h3>
+    <h3>Tarea 1.3 Publicar fichero</h3>
+    <h3>Tarea 1.4 Funcionalidades al vídeo.</h3>
     <div class="text-black">
-        Fichero con vídeo incrustado
+        Fichero con vídeo incrustado.
+        Controles utilizados:
+		.
     </div>
     <div class="video-container">
         <video controls>
