--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
         .text-black {
             color: #000000; /* Negro */
         }
+	.section {
+            margin: 20px 0;
+            width: 80%;
+        }
+        .section-title {
+            font-weight: bold;
+            color: #00008B; /* Azul oscuro */
+        }
+        .section-content {
+            margin-left: 20px;
+        }
     </style>
 </head>
 <body>
@@ -53,6 +64,20 @@
         Controles utilizados:
 		.
     </div>
+<div class="section">
+        <div class="section-title">1. Controles utilizados:</div>
+        <div class="section-content">
+            a. sss<br>
+            b. sss
+        </div>
+    </div>
+    <div class="section">
+        <div class="section-title">2. Portal utilizado:</div>
+        <div class="section-content">
+            (Descripción del portal utilizado)
+        </div>
+    </div>
+
     <div class="video-container">
         <video controls>
             <source src="VID_20240518_200128_yecla_se_corona.mp4" type="video/mp4">
