Index --> corregir datos vídeos
Corrección de los datos de los vídeos en la sección Tipos de vídeos soportados.

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
     <div class="section">
         <div class="section-title">2. Tipos de vídeos soportados:</div>
         <div class="section-content">
-            a. T1-1_clip01.MP4 	--> MP4 (H.264 + AAC) <br>
-            B. T1-1_clip02.WEBM --> WebM (VP9 + Opus)<br>
-            c. T1-1_clip03.OGV	--> Ogg (Theora + Vorbis)
+            a.	T1-1_clip01.MP4 	--> MP4 (H.264 + AAC) <br>
+            b.	T1-1_clip02.WEBM 	--> WebM (VP9 + Opus)<br>
+            c.	T1-1_clip03.OGV		--> Ogg (Theora + Vorbis)
         </div>
     </div>
 
